--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,10 +7,20 @@
                 <img src=<%=listing.image.url%> class="card-img-top show-img" alt="listing image">
                 <div class="card-body">
                     <p class="card-text">
+                        <i>~@<%=listing.owner.username%></i><br>
+                    </p>
+                    <p class="card-text">
                         <%=listing.description%> <br>
-                        &#8377; <%=listing.price.toLocaleString("en-IN")%> <br>
-                        <%=listing.location%> <br>
-                        <%=listing.country%>
+                    </p>
+                    <p class="card-text">
+                        &#8377; <%=listing.price.toLocaleString("en-IN")%>
+                    </p>
+                    <p class="card-text">
+                        <%=listing.location%> 
+                    </p>
+                    <p class="card-text">
+                        <%=listing.country%> 
+                    </p>
                     </p>
                 </div>
             </div>
@@ -18,19 +28,22 @@
     </div>
     <div class="row mb-3">
         <div class="col-8 ">
-            <div class="show-btns">       
-                <a class="btn btn-dark edit-btn col-1 offset-3" href="/listings/<%=listing._id%>/edit"> 
-                    Edit 
-                </a>
-                <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" >
-                    <BUTTON class="btn btn-dark offset-5 ">Delete</BUTTON>
-                </form>
-            </div>
+            <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+                <div class="show-btns">       
+                    <a class="btn btn-dark edit-btn col-1 offset-3" href="/listings/<%=listing._id%>/edit"> 
+                        Edit 
+                    </a>
+                    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" >
+                        <BUTTON class="btn btn-dark offset-5 ">Delete</BUTTON>
+                    </form>
+                </div>
+            <% } %>
         </div>
     </div>
 
     <div class="col-8 offset-2 mb-3 mt-3">
         <hr>
+        <% if (currUser) {%> 
         <h4>Leave a review</h4>
         <form action="/listings/<%=listing.id%>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mb-3 mt-3">
@@ -45,6 +58,7 @@
             <button class="btn btn-outline-dark">Submit</button>
         </form>
     </div>
+    <% } %>
 
     <div class="col-8 offset-2 mb-3 mt-3">
         <p><b>All reviews</b></h4>
@@ -52,7 +66,7 @@
             <%for(let review of listing.reviews) {%>
                 <div class="card col-5 mb-3 ms-3 review-card">
                     <div class="card-body">
-                        <h5 class="card-title">Arin Mehta</h5>
+                        <h5 class="card-title">@<%=review.author.username%></h5>
                         <p class="card-text mb-2"><%=review.comment%></p>
                         <p class="card-text small-text"><%=review.rating%>stars</p>
                     </div>
