--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-8 offset-2">
             <h3>Create a new listing</h3>
-            <form action="/listings" method="POST" novalidate class="needs-validation">
+            <form action="/listings" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
 
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
@@ -30,13 +30,13 @@
                 </div>
 
             <div class="mb-3">
-                    <label for="imageUrl" class="form-label">Image Link</label>
+                    <label for="imageUrl" class="form-label">Upload Image </label>
                     <input
                     id="imageUrl" 
-                    type="text" 
-                    name="listing[image][url]" 
-                    placeholder="Enter image URL/link" 
+                    type="file" 
+                    name="listing[image]"
                     class="form-control"
+                    required
                     />
             </div>
                 <div class="row">
