--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,3 +146,33 @@ body{
 .review-card{
     justify-content: center;
 }
+
+#map {
+    width: 900px;
+    height: 350px;
+    border-radius: 15px;
+}
+
+.marker {
+                display: block;
+                border: none;
+                cursor: pointer;
+                padding: 0;
+                width: 50px;
+                height: 50px;
+
+            }
+
+            .coordinates {
+                background: rgba(0, 0, 0, 0.7);
+                color: #fff;
+                position: absolute;
+                bottom: 40px;
+                left: 10px;
+                padding: 5px 10px;
+                margin: 0;
+                font-size: 14px;
+                line-height: 18px;
+                border-radius: 3px;
+                display: none;
+            }
