Ready to deploy

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -81,7 +81,7 @@
 
                 
 
-                <button class="btn add-btn">Add</button><br></br>
+                <button class="btn add-btn" type="submit">Add</button><br></br>
 
             </form>
         </div>
