--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,27 @@ body{
     flex: 1;
 }
 
+#filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    
+}
 
+.filter{
+    margin-right: 1.5rem;
+    margin-top: 0.9rem;
+    text-align: center;
+    opacity : 0.7;
+}
+.filter:hover {
+    opacity : 1;
+    cursor: pointer;
+}
+
+.filter p {
+    font-size: 0.8rem;
+}
 /* Navbar */
 .navbar{
     height: 5rem;
@@ -23,6 +43,22 @@ body{
 
 .nav-link{
     color: #222222 !important;
+}
+
+#btn-search{
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 20px;
+    padding: 0 1rem 0 1rem;
+}
+
+#btn-search i{
+    display: inline;
+}
+
+.search-inp{
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    border-radius: 15px;
 }
 
 /* Footer */
@@ -114,7 +150,7 @@ body{
 /* show page */
 
 .show-img{
-    height: 35vh;
+    height: 50vh;
 }
 
 .show-btns{
@@ -154,25 +190,38 @@ body{
 }
 
 .marker {
-                display: block;
-                border: none;
-                cursor: pointer;
-                padding: 0;
-                width: 50px;
-                height: 50px;
+    display: block;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+}
 
-            }
+.coordinates {
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    position: absolute;
+    bottom: 40px;
+    left: 10px;
+    padding: 5px 10px;
+    margin: 0;
+    font-size: 14px;
+    line-height: 18px;
+    border-radius: 3px;
+    display: none;
+}
 
-            .coordinates {
-                background: rgba(0, 0, 0, 0.7);
-                color: #fff;
-                position: absolute;
-                bottom: 40px;
-                left: 10px;
-                padding: 5px 10px;
-                margin: 0;
-                font-size: 14px;
-                line-height: 18px;
-                border-radius: 3px;
-                display: none;
-            }
+.taxInfo{
+    display : none;
+}
+
+.tax-toggle{
+    border: 1px solid black;
+    height : 3rem;
+    padding: 0.72rem;
+    border-radius: 0.9rem;
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
+}
