--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,9 @@
+<style>
+ .search-inp{
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    border-radius: 1.2rem;
+}
+</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
@@ -8,6 +14,12 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
         
+      </div>
+      <div class="ms-auto">
+         <form class="d-flex" role="search">
+      <input class="form-control me-2 search-inp" type="search" placeholder="Search destination" aria-label="Search"/>
+      <button class="btn btn-search" id="btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+    </form>
       </div>
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
