--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,58 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h1>All Listings</h1>
+    <div id="filters">
+        <div class="filter">
+            <div><i class="fa-solid fa-fire"></i></div>
+            <p>Trending</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+            <p>Rooms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain-city"></i></div>
+            <p>Iconic cities</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain"></i></div>
+            <p>Mountains</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-gopuram"></i></div>
+            <p>Castles</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-person-swimming"></i></div>
+            <p>Amazing pools</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-campground"></i></div>
+            <p>Camping</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-cow"></i></div>
+            <p>Farms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-regular fa-snowflake"></i></div>
+            <p>Arctic</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-ship"></i></div>
+            <p>Boats</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-igloo"></i></i></div>
+            <p>Domes</p>
+        </div>
+
+        <div class="tax-toggle">
+            <div class="form-check form-switch form-check-reverse">
+                <input class="form-check-input" type="checkbox" id="switchCheckReverse">
+                <label class="form-check-label" for="switchCheckReverse">Display total after taxes</label>
+            </div>
+        </div>
+    </div>
     
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for (let listing of listings){%>
@@ -12,6 +64,7 @@
                         <p class="card-text">
                             <b><%=listing.title%></b></p>
                             &#8377; <%=listing.price.toLocaleString("en-IN")%>/Night
+                            &nbsp; &nbsp; <i class="taxInfo"> +18% GST</i>
                         </p>
                     </div>
                 </div>
@@ -19,3 +72,16 @@
         <%}%>
     </div>
 </body>
+<script>
+    let taxSwitch = document.getElementById("switchCheckReverse");
+    taxSwitch.addEventListener("click", () => {
+        let taxInfo =document.getElementsByClassName("taxInfo");
+        for (info of taxInfo) {
+            if(info.style.display != "inline"){
+                info.style.display= "inline";
+            }else{
+                info.style.display = "none";
+            }
+        }
+    })
+</script>
