--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,8 +4,8 @@
     const coords = <%- JSON.stringify(listing.geometry ? (listing.geometry.coordinates || listing.geometry) : null)%>;
     console.log(coords);
 </script>
-<body>
-    <div class="row mb-0">
+<body >
+    <div class="row mb-0 justify-content-center">
         <div class="col-10 col-md-8 offset-2 mt-3">
             <h3><%=listing.title%></h3>
             <div class="card show-card listing-card">
@@ -83,7 +83,7 @@
         <% if (listing.reviews && listing.reviews.length > 0) { %>
   <p><b>All reviews</b></p>
 
-  <div class="row">
+  <div class="row justify-content-center">
     <% for (let review of listing.reviews) { %>
       <div class="card col-5 mb-3 ms-3 review-card">
         <div class="card-body">
