--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -79,7 +79,7 @@
     </div>
     <% } %>
 
-    <div class="col-md-8 col-10 offset-md-2 mb-3 mt-3 justify-content-center">
+    <div class="col-md-8 col-10 offset-md mb-3 mt-3 justify-content-center">
         <% if (listing.reviews && listing.reviews.length > 0) { %>
         <p><b>All reviews</b></p>
         <div class="row justify-content-center">
@@ -100,7 +100,7 @@
                     </form>
                 </div>
             <% } %>
-            <hr>
+           
         </div>
         <% } else { %>
         <p>No reviews yet.</p>
